--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -8,7 +8,8 @@
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.name) }}
-
+        {{ form_row(registrationForm.prenom) }}
+        {{ form_row(registrationForm.phone_number) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
