affichage de la liste des loisir ok, lien pour participer et voir la fiche ok mais la vue n est pas terminer manque de temps, vue des categories pas terminer pas eu le temps aussi mais fonctionnel ok, login et logout ok plus register et role admin et user ok reste plus qu a faire tout le scc et ql detail a regler sinon tout est ok

--- a/templates/loisir/index.html.twig
+++ b/templates/loisir/index.html.twig
@@ -2,6 +2,33 @@
 {% block title %}{{ website }}{% endblock %}
 {% block body %}
    <h1>Liste des {{ website }}</h1>
-
+ 
+  <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Seance</th>
+      <th scope="col">Lieux</th>
+      <th scope="col">Date</th>
+      <th scope="col">Categorie</th>
+    </tr>
+  </thead>
+  {% for loisir in loisirs %}
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>{{ loisir.name }}</td>
+      <td>{{ loisir.adresse }}</td>
+      <td>{{ loisir.date}}</td>
+      <td>{{ loisir.category.name }}</td>
+       <td></div>
+				<a href="{{ path("loisir_show", { id: loisir.id }) }}" class="btn btn-primary m-4 p-1">Participer</a>
+				</div></td>
+    </tr>
+    
+  </tbody>
+  {% endfor %}
+</table>
+     
   
 {% endblock %}
