en cours d amelioration

--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -1,6 +1,9 @@
-{% extends "@EasyAdmin/layout.html.twig" %}
 
+{% extends "@EasyAdmin/layout.html.twig" %}
 {% block content %}
+
+{% include "_navbar.html.twig" %}
+
 <div class="jumboton">
     <h1 class="display-4">Administration</h1>
     <P class="lead">Interface administrateur</p>
